fix: correct a sufix and prefix overflow

--- a/packages/components/src/components/Input/styles.css
+++ b/packages/components/src/components/Input/styles.css
@@ -11,8 +11,6 @@
 
   border: 1px solid transparent;
   outline: 1px solid transparent;
-
-  overflow: hidden;
 }
 
 .arkyn_input:hover {
@@ -47,6 +45,7 @@
   left: 0;
   top: 0;
   bottom: 0;
+  border-radius: 5px 0 0 5px;
   border-right: 1px solid var(--secondary-300);
 }
 
@@ -54,6 +53,7 @@
   right: 0;
   top: 0;
   bottom: 0;
+  border-radius: 0 5px 5px 0;
   border-left: 1px solid var(--secondary-300);
 }
 
@@ -122,7 +122,7 @@
 }
 
 .arkyn_input.underline::before {
-  content: "";
+  content: " ";
   position: absolute;
   height: 1px;
   left: 0;
